[gd_scene load_steps=4 format=3 uid="uid://beurr4640kar3"]

[ext_resource type="Script" path="res://scripts/spear.gd" id="1_5xv7r"]
[ext_resource type="Texture2D" uid="uid://blomytp7ogmyr" path="res://textures/pixilart-drawing (2).png" id="1_dp02x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vdrt5"]
radius = 27.0

[node name="Area2D" type="Area2D"]
collision_layer = 4
collision_mask = 13
script = ExtResource("1_5xv7r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CircleShape2D_vdrt5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, 6)
rotation = 0.785398
scale = Vector2(4, 4)
texture = ExtResource("1_dp02x")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1.5, 1.5)
scale = Vector2(4.25, 4.25)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
